# Task_NeXus

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.agent/workflows/: build-release.md
.trae/documents/: 优化 Windows 安装包配置（启用安装向导和路径选择）.md
docs/: 使用说明书.md
electron/: main.js  preload.js
scripts/: bump-tauri-version.js  bump-version.js
src/: App.jsx  index.css
src/components/: ContextMenu.jsx  ControlBar.jsx  CoreGrid.jsx  Header.jsx  ProcessScanner.jsx  SettingsPanel.jsx
tauri-lite/: Cargo.toml
tauri-lite/src/: main.rs
tauri-lite/src/core/: governor.rs  mod.rs  thread.rs  topology.rs  types.rs
tauri-v2/: package-lock.json  package.json
tauri-v2/docs/: process_monitor_refactor.md
tauri-v2/src/: App.tsx  types.ts
tauri-v2/src-tauri/: Cargo.toml  tauri.conf.json
tauri-v2/src-tauri/src/: advanced_affinity.rs  config.rs  governor.rs  hardware.rs  lib.rs  main.rs  monitor.rs  power.rs  registry.rs  security.rs  thread.rs  tweaks.rs  watchdog.rs
tauri-v2/src/components/: CoreGridSelector.tsx  ManualOptimizer.tsx  ProcessScanner.jsx  ProcessScanner.tsx  SmartAffinitySelector.tsx  SystemOptimizer.tsx
tauri-v2/src/components/common/: MiniGraph.tsx
tauri-v2/src/components/optimizer/: RegistryCleaner.tsx
tauri-v2/src/components/process/: ModeSelector.tsx  ProcessContextMenu.tsx  ProcessListHeader.tsx  ProcessMetricsHeader.tsx
tauri-v2/src/components/settings/: GeekEditor.tsx  PowerSettings.tsx  SettingsPanel.tsx
tauri-v2/src/data/: cpuDatabase.ts
tools/: license-generator.js
(+2 files in other folders)
