[package]
name = "tn-lite"
version = "0.1.0"
edition = "2021"
description = "Task NeXus Lite - 原生高性能 CPU 调度工具"

[dependencies]
# UI Framework
eframe = "0.27.2"
egui = "0.27.2"

# Icon Parsing
ico = "0.3"

# System Monitoring (match tauri-v2 version)
sysinfo = "0.31"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File Paths
dirs = "5.0"

# Native File Dialogs
rfd = "0.14"

# Windows Registry (for auto-start)
[target.'cfg(windows)'.dependencies]
winreg = "0.55"


# Windows API (match tauri-v2 version for compatibility)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Wdk_System_SystemInformation",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
